--- a/themes/bruiser-conversions/layouts/partials/footer.html
+++ b/themes/bruiser-conversions/layouts/partials/footer.html
@@ -9,9 +9,9 @@
         </span>
         <span class="pull-xs-right">
           <div class="icons">
-            <a class="icon-link" href="https://www.facebook.com/bruiserconversions" target="_blank"><img src='images/graphics/facebook.png' /></a>
-            <a class="icon-link" href="https://www.instagram.com/bruiserconversions/" target="_blank"><img src='images/graphics/instagram.png' /></a>
-            <a class="icon-link" href="https://www.youtube.com/user/BruiserConversions" target="_blank"><img src='images/graphics/youtube.png' /></a>
+            <a class="icon-link" href="https://www.facebook.com/bruiserconversions" target="_blank"><img src='/images/graphics/facebook.png' /></a>
+            <a class="icon-link" href="https://www.instagram.com/bruiserconversions/" target="_blank"><img src='/images/graphics/instagram.png' /></a>
+            <a class="icon-link" href="https://www.youtube.com/user/BruiserConversions" target="_blank"><img src='/images/graphics/youtube.png' /></a>
           </div>
         </span>
       </div>
