--- a/themes/bruiser-conversions/layouts/partials/header.html
+++ b/themes/bruiser-conversions/layouts/partials/header.html
@@ -1,10 +1,10 @@
 <title>Bruiser Conversions</title>
-<link rel="stylesheet" media="all" href="css/bootstrap.css"/>
-<link rel="stylesheet" media="all" href="css/font-awesome.min.css"/>
-<link rel="stylesheet" media="all" href="css/application.css"/>
-<script src="js/jquery.js"></script>
-<script src="js/tether.js"></script>
-<script src="js/bootstrap.js"></script>
+<link rel="stylesheet" media="all" href="/css/bootstrap.css"/>
+<link rel="stylesheet" media="all" href="/css/font-awesome.min.css"/>
+<link rel="stylesheet" media="all" href="/css/application.css"/>
+<script src="/js/jquery.js"></script>
+<script src="/js/tether.js"></script>
+<script src="/js/bootstrap.js"></script>
 <script src="https://use.typekit.net/pbd5vfs.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
 <script src="//assets.juicer.io/embed.js" type="text/javascript"></script>
