--- a/themes/bruiser-conversions/layouts/partials/nav.html
+++ b/themes/bruiser-conversions/layouts/partials/nav.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-dark navbar-full bg-inverse">
   <a href="/" class="navbar-brand">
-    <img src="images/logo.png", class="logo" />
+    <img src="/images/logo.png", class="logo" />
   </a>
   <ul class="nav navbar-nav">
     <li class="nav-item dropdown" >
