--- a/themes/bruiser-conversions/layouts/partials/nav.html
+++ b/themes/bruiser-conversions/layouts/partials/nav.html
@@ -12,7 +12,7 @@
         <a href="/hemi_conversions" class="dropdown-item">Hemi</a>
         <a href="/diesel_conversions" class="dropdown-item">Diesel</a>
         <div class="dropdown-divider"></div>
-        <a href="certified_installation_facilities" class="dropdown-item">Certified Installation Facilities</a>
+        <a href="/certified_installation_facilities" class="dropdown-item">Certified Installation Facilities</a>
       </div>
     </li>
 
@@ -21,24 +21,24 @@
 
       <div class="dropdown-menu" aria-labelledby="power-menu-link">
         <h6 class="dropdown-header">Wrangler Base (2-Door)</h6>
-        <a href="super_cab", class="dropdown-item">Super Cab</a>
+        <a href="/super_cab" class="dropdown-item">Super Cab</a>
         <div class="dropdown-divider"></div>
         <h6 class="dropdown-header">Wrangler Unlimited Base (4-Door)</h6>
-        <a href="jk_crew", class="dropdown-item">JK Crew</a>
-        <a href="overlander", class="dropdown-item">Overlander</a>
+        <a href="/jk_crew" class="dropdown-item">JK Crew</a>
+        <a href="/overlander" class="dropdown-item">Overlander</a>
       </div>
     </li>
 
     <li class="nav-item pull-xs-right">
-      <a href="contact", class="btn btn-outline-success btn-outline-brand">Contact</a>
+      <a href="/contact", class="btn btn-outline-success btn-outline-brand">Contact</a>
     </li>
 
     <li class="nav-item">
-      <a href="feed", class="nav-link">Feed</a>
+      <a href="/feed", class="nav-link">Feed</a>
     </li>
 
     <li class="nav-item">
-      <a href="reviews", class="nav-link">Reviews</a>
+      <a href="/reviews", class="nav-link">Reviews</a>
     </li>
   </ul>
 </nav>
