--- a/themes/bruiser-conversions/layouts/partials/header.html
+++ b/themes/bruiser-conversions/layouts/partials/header.html
@@ -2,11 +2,13 @@
 <link rel="stylesheet" media="all" href="/css/bootstrap.css"/>
 <link rel="stylesheet" media="all" href="/css/font-awesome.min.css"/>
 <link rel="stylesheet" media="all" href="/css/application.css"/>
-<link rel="stylesheet" media="all" href="/js/galleria.classic.css"/>
+<link rel="stylesheet" media="all" href="/css/galleria.twelve.min.css"/>
+
 <script src="/js/jquery.js"></script>
 <script src="/js/tether.js"></script>
 <script src="/js/bootstrap.js"></script>
-<script src="/js/galleria-1.5.3.min.js"></script>
+<script src="/js/galleria-1.5.5.min.js"></script>
+<script src="/js/galleria.twelve.min.js"></script>
 <script src="https://use.typekit.net/pbd5vfs.js"></script>
 <script>try{Typekit.load({ async: true });}catch(e){}</script>
 <script src="//assets.juicer.io/embed.js" type="text/javascript"></script>
