improve page urls SEO

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,13 +6,13 @@
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-      <a href="/ls_conversions">
+      <a href="/jeep-ls-conversions">
         <div class="title">LS Engine Conversion</div>
         <img src="images/jeep-ls-engine-conversion-002.jpg" />
       </a>
     </div>
     <div class="carousel-item">
-      <a href="/jk_crew">
+      <a href="/jk-crew">
         <div class="title">JK Crew Conversion</div>
         <img src="images/jk-crew-conversion-005.jpg" />
       </a>
