--- a/themes/bruiser-conversions/layouts/partials/footer.html
+++ b/themes/bruiser-conversions/layouts/partials/footer.html
@@ -21,13 +21,13 @@
         <div class="nav-title">Power</div>
         <ul class="nav">
           <li class="nav-item">
-            <a href="/ls_conversions">LS</a>
+            <a href="/jeep-ls-conversions">LS</a>
           </li>
           <li class="nav-item">
-            <a href="/hemi_conversions">Hemi</a>
+            <a href="/jeep-hemi-conversions">Hemi</a>
           </li>
           <li class="nav-item">
-            <a href="/diesel_conversions">Diesel</a>
+            <a href="/jeep-diesel-conversions">Diesel</a>
           </li>
         </ul>
       </div>
@@ -35,10 +35,10 @@
         <div class="nav-title">Body</div>
         <ul class="nav">
           <li class="nav-item">
-            <a href="/super_cab">Super Cab</a>
+            <a href="/super-cab">Super Cab</a>
           </li>
           <li class="nav-item">
-            <a href="/jk_crew">JK Crew</a>
+            <a href="/jk-crew">JK Crew</a>
           </li>
           <li class="nav-item">
             <a href="/overlander">Overlander</a>
