--- a/themes/bruiser-conversions/layouts/partials/header.html
+++ b/themes/bruiser-conversions/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<title>Bruiser Conversions</title>
+<title>{{ .Title }}</title>
 <link rel="stylesheet" media="all" href="/css/bootstrap.css"/>
 <link rel="stylesheet" media="all" href="/css/font-awesome.min.css"/>
 <link rel="stylesheet" media="all" href="/css/application.css"/>
@@ -21,5 +21,4 @@
 
   ga('create', 'UA-51894707-6', 'auto');
   ga('send', 'pageview');
-
 </script>
