--- a/themes/bruiser-conversions/layouts/partials/footer.html
+++ b/themes/bruiser-conversions/layouts/partials/footer.html
@@ -21,13 +21,13 @@
         <div class="nav-title">Power</div>
         <ul class="nav">
           <li class="nav-item">
-            <a href="/jeep-ls-conversions">LS</a>
+            <a href="/jeep-ls-conversion">LS</a>
           </li>
           <li class="nav-item">
-            <a href="/jeep-hemi-conversions">Hemi</a>
+            <a href="/jeep-hemi-conversion">Hemi</a>
           </li>
           <li class="nav-item">
-            <a href="/jeep-diesel-conversions">Diesel</a>
+            <a href="/jeep-diesel-conversion">Diesel</a>
           </li>
         </ul>
       </div>
