--- a/themes/bruiser-conversions/layouts/partials/nav.html
+++ b/themes/bruiser-conversions/layouts/partials/nav.html
@@ -8,9 +8,9 @@
 
       <div class="dropdown-menu" aria-labelledby="power-menu-link">
         <h6 class="dropdown-header">Engine Conversions</h6>
-        <a href="/jeep-ls-conversions" class="dropdown-item">LS</a>
-        <a href="/jeep-hemi-conversions" class="dropdown-item">Hemi</a>
-        <a href="/jeep-diesel-conversions" class="dropdown-item">Diesel</a>
+        <a href="/jeep-ls-conversion" class="dropdown-item">LS</a>
+        <a href="/jeep-hemi-conversion" class="dropdown-item">Hemi</a>
+        <a href="/jeep-diesel-conversion" class="dropdown-item">Diesel</a>
         <div class="dropdown-divider"></div>
         <a href="/certified-installation-facilities" class="dropdown-item">Certified Installation Facilities</a>
       </div>
