--- a/themes/bruiser-conversions/layouts/partials/header.html
+++ b/themes/bruiser-conversions/layouts/partials/header.html
@@ -1,4 +1,5 @@
 <title>{{ .Title }}</title>
+<meta name="description" content="{{ .Description }}">
 <link rel="stylesheet" media="all" href="/css/bootstrap.css"/>
 <link rel="stylesheet" media="all" href="/css/font-awesome.min.css"/>
 <link rel="stylesheet" media="all" href="/css/application.css"/>
